2003-06-25  Christian Stimming  <stimming@tuhh.de>

	* src/gnome-utils/dialog-transfer.h: Add callback handler that is
	notified of the newly created Transaction.

2003-06-24  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/*: Refactor many HBCI functions to
	eventually enable queued processing of several HBCI jobs.

2003-06-23  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-account.c: Limit the commodity choices
	based upon the current account type. #102023, #115461

	* src/gnome-utils/dialog-commodity.c: Add a new argument to the
	dialog creation functions to specify what types of commodities
	should be presented.  Also tweak the title of the dialog based
	upon this argument.  Remove the "new" button when the dialog is
	limited strictly to currencies.

	* src/gnome-utils/gnc-commodity-edit.c:
	* src/import-export/binary-import/druid-commodity.c: 
	* src/import-export/import-commodity-matcher.c: 
	* src/import-export/qif-import/druid-qif-import.c: Updated for new
	commodity dialog argument.

	* src/report/standard-reports/register.scm: Show the running
	balance column by default. #92052.

	* src/gnome/window-register.c: Annotate the window title to
	indicate whether a register is for a single account or it includes
	all subaccounts. #107927

	* src/gnome/gnc-split-reg.c: Change the register close dialog to
	include a cancel option. #105742

	* src/gnome/window-register.c: Don't close the register if the
	user cancelled. #105742

	* src/engine/Scrub.c (xaccSplitScrub): Change a warning message to
	an info. This clause is hit every time a user saves a changed
	transaction by clicking on another transaction.

	* src/gnome/window-reconcile.c: If the user has manually entered
	an amount, then stop automatically updated the amount when the
	date is changed. #110806

2003-06-22  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-commodity.[ch]: Clean up usage of the
	gnc_ui_update_namespace_picker function.
