@@ -190,10 +190,11 @@
                                    optname-price-source))
          (show-rates? (get-option gnc:pagename-display 
                                   optname-show-rates))
+	 (from-date-printable (gnc:date-option-absolute-time
+			       (get-option gnc:pagename-general
+					   optname-from-date)))
 	 (from-date-tp (gnc:timepair-end-day-time
-	 		(gnc:timepair-previous-day
-			 (gnc:date-option-absolute-time
-			  (get-option gnc:pagename-general optname-from-date)))))
+	 		(gnc:timepair-previous-day from-date-printable)))
          (to-date-tp (gnc:timepair-end-day-time 
                       (gnc:date-option-absolute-time
                        (get-option gnc:pagename-general
@@ -236,8 +237,9 @@
     
     ;;(gnc:warn "account names" liability-account-names)
     (gnc:html-document-set-title! 
-     doc (sprintf #f "%s %s"
+     doc (sprintf #f "%s %s - %s"
 		  (get-option gnc:pagename-general gnc:optname-reportname)
+		  (gnc:print-date from-date-printable)
                   (gnc:print-date to-date-tp)))
 
     (if (not (null? accounts))
@@ -246,8 +248,10 @@
                (liability-balance #f)
                (equity-balance #f)
                (sign-reversed-liability-balance #f)
-               (neg-retained-profit-balance #f)
-               (retained-profit-balance #f)
+               (neg-net-profit-balance #f)
+               (net-profit-balance #f)
+	       (neg-retained-earnings-balance #f)
+	       (retained-earnings-balance #f)
                (total-equity-balance #f)
                (equity-plus-liability #f)
                (unrealized-gain-collector #f)
@@ -278,12 +282,17 @@
 	  (set! sign-reversed-liability-balance
                 (gnc:make-commodity-collector))
 	  (gnc:report-percent-done 12)
-	  (set! neg-retained-profit-balance 
+	  (set! neg-net-profit-balance 
                 (accountlist-get-comm-balance-at-date
                  income-expense-accounts
                  from-date-tp to-date-tp))
+	  (set! neg-retained-earnings-balance
+		(accountlist-get-comm-balance-at-date
+		 income-expense-accounts
+		 (cons 0 0) from-date-tp))
 	  (gnc:report-percent-done 14)
-	  (set! retained-profit-balance (gnc:make-commodity-collector))
+	  (set! net-profit-balance (gnc:make-commodity-collector))
+	  (set! retained-earnings-balance (gnc:make-commodity-collector))
 	  (gnc:report-percent-done 16)
 	  (set! total-equity-balance (gnc:make-commodity-collector))
 	  (gnc:report-percent-done 18)
@@ -326,12 +335,18 @@
                  show-parent-balance? show-parent-total?
                  show-fcur? report-currency exchange-fn #t))
 
-          (retained-profit-balance 'minusmerge
-                                   neg-retained-profit-balance
+          (net-profit-balance 'minusmerge
+                                   neg-net-profit-balance
+                                   #f)
+          (retained-earnings-balance 'minusmerge
+                                   neg-retained-earnings-balance
                                    #f)
           (total-equity-balance 'minusmerge equity-balance #f)
           (total-equity-balance 'merge
-                                retained-profit-balance
+                                net-profit-balance
+                                #f)	    
+          (total-equity-balance 'merge
+                                retained-earnings-balance
                                 #f)	    
           (sign-reversed-liability-balance 'minusmerge
                                            liability-balance
@@ -406,8 +421,10 @@
           (add-subtotal-line
            asset-table (_ "Equity") #f)
           (html-table-merge asset-table equity-table)
+	  (add-subtotal-line
+	   asset-table (_ "Retained Earnings") retained-earnings-balance)
           (add-subtotal-line
-           asset-table (_ "Net Profit") retained-profit-balance)
+           asset-table (_ "Net Profit") net-profit-balance)
           (add-subtotal-line
            asset-table (_ "Total Equity") total-equity-balance)
 
